--- a/frontend/src/stylesheets/clothes-show-header.css
+++ b/frontend/src/stylesheets/clothes-show-header.css
@@ -38,10 +38,8 @@
 
 .clothes-show-header__title {
     width: 100%;
-    background: rgb(8, 8, 8);
-    /* background: rgb(8,8,8);
-    background: radial-gradient(circle, rgba(8,8,8,1) 0%, rgba(61,60,60,1) 75%);  */
-    ;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 21%, rgba(46,51,37,1) 86%); 
 
 }
 
@@ -53,8 +51,6 @@
     
     text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.3); */
     color: white;
-
-
     font-style: italic;
     padding: .7em;
 }
@@ -94,7 +90,8 @@
 .clothes-show-header-intro__inner {
     width: calc(100% + 6em);
     margin: 0 auto;
-    background: rgba(0, 0, 0, .6);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,.5) 21%, rgba(46,51,37,.5) 86%); 
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(8.7px);
     margin-left: -3em;
@@ -112,7 +109,7 @@
     font-style: italic;
     font-weight: 700;
     color: white;
-padding: .8em;
+    padding: .8em;
 }
 
 .clothes-show-header__logo,
